--- a/index.html
+++ b/index.html
@@ -1,79 +1,36 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>HTML Viewer</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTML Viewer</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <div class="container">
-        <!-- Header Section -->
-        <header class="header">
-            <h1 class="title">📱 HTML Viewer</h1>
-            <p class="subtitle">Загрузите HTML-файл, чтобы просмотреть его прямо в браузере на iPhone</p>
-        </header>
+  <main class="app-shell">
+    <header class="hero">
+      <h1>HTML Viewer</h1>
+      <p>Загрузите HTML-файл, чтобы просмотреть его прямо в браузере на iPhone.</p>
+    </header>
 
-        <!-- File Selection Section -->
-        <section class="file-input-section">
-            <label for="fileInput" class="file-input-label">
-                <svg class="upload-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-                    <polyline points="17 8 12 3 7 8"></polyline>
-                    <line x1="12" y1="3" x2="12" y2="15"></line>
-                </svg>
-                <span class="file-input-text">Выбрать HTML файл(ы)</span>
-            </label>
-            <input type="file" id="fileInput" accept=".html,text/html" multiple class="file-input-hidden">
-        </section>
+    <section class="controls" aria-label="Выбор файлов">
+      <label for="fileInput" class="file-label">Выберите один или несколько HTML-файлов</label>
+      <input id="fileInput" type="file" accept=".html,text/html" multiple>
+      <p class="hint">После выбора файлов коснитесь имени файла ниже, чтобы открыть его в просмотрщике.</p>
+    </section>
 
-        <!-- File List Section -->
-        <section class="file-list-section" id="fileListSection" style="display: none;">
-            <h2 class="section-title">Выбранные файлы:</h2>
-            <ul class="file-list" id="fileList"></ul>
-            <button class="clear-all-btn" onclick="clearSavedFiles()">🗑️ Очистить все сохраненные файлы</button>
-        </section>
+    <section class="file-list" aria-live="polite">
+      <h2>Сохранённые файлы</h2>
+      <p class="hint list-hint">Файлы остаются на устройстве до удаления (кнопка × рядом с названием).</p>
+      <div id="fileButtons" class="file-buttons" role="list"></div>
+    </section>
 
-        <!-- Preview Section -->
-        <section class="preview-section" id="previewSection" style="display: none;">
-            <div class="preview-header">
-                <h2 class="section-title">Предварительный просмотр</h2>
-                <span class="current-file-name" id="currentFileName"></span>
-            </div>
-            <div class="iframe-container">
-                <iframe id="viewerFrame" class="viewer-iframe" sandbox="allow-scripts allow-same-origin"></iframe>
-            </div>
-        </section>
+    <section class="viewer" aria-label="Просмотр HTML">
+      <div id="statusMessage" class="status" role="alert" aria-live="assertive"></div>
+      <iframe id="viewerFrame" title="Область просмотра выбранного HTML" sandbox="allow-scripts allow-forms allow-same-origin"></iframe>
+    </section>
+  </main>
 
-        <!-- Error Message Section -->
-        <div class="error-message" id="errorMessage" style="display: none;">
-            <svg class="error-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <circle cx="12" cy="12" r="10"></circle>
-                <line x1="12" y1="8" x2="12" y2="12"></line>
-                <line x1="12" y1="16" x2="12.01" y2="16"></line>
-            </svg>
-            <p class="error-text" id="errorText"></p>
-        </div>
-
-        <!-- Instructions -->
-        <section class="instructions">
-            <h3 class="instructions-title">💡 Как использовать:</h3>
-            <ol class="instructions-list">
-                <li>Нажмите кнопку "Выбрать HTML файл(ы)"</li>
-                <li>Выберите один или несколько HTML-файлов с вашего устройства</li>
-                <li>Файлы автоматически сохраняются в браузере и будут доступны при следующем открытии</li>
-                <li>Нажмите на имя файла из списка для просмотра</li>
-                <li>Используйте кнопку 🗑️ рядом с файлом для удаления или очистите все файлы</li>
-                <li>Все файлы обрабатываются локально и не загружаются на сервер</li>
-            </ol>
-        </section>
-    </div>
-
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
-
 </html>
